# diauxic-metabol

./: .gitignore  LICENSE  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml
Excalidraw/: network_visualization.excalidraw.md
diaux_coli/: __init__.py  dataset.py  features.py  plots.py
diaux_coli/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: biochem_notes.md  data_harmonization.excalidraw.md  data_harmonization.md  data_smoothing_fitting.excalidraw.md  index.md  interpreting_the_results.md  open_questions.md
notebooks/: brainstorm.excalidraw.md
